--- a/mainapp/templates/mainapp/includes/inc_products_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_products_menu.html
@@ -1,8 +1,14 @@
 <ul class="links-menu">
-    {% for link_menu in links_menu %}
-        <li><a href="{% url link_menu.href %}" {% if request.resolver_match.url_name == link_menu.href %} class="active" {% endif %}>
-                {{ link_menu.title }}
+        <li><a href="{% url 'products:products_list' 0 %}">
+                все
             </a>
         </li>
-        {% endfor %}
+    {% for link_menu in links_menu %}
+        <li><a href="{% url 'products:products_list' link_menu.pk %}"
+               {% if request.resolver_match.kwargs.pk == link_menu.pk %} class="active"
+                                                                          {% endif %}>
+                {{ link_menu.name }}
+            </a>
+        </li>
+    {% endfor %}
 </ul>
