the 5th hw is completed

--- a/mainapp/templates/mainapp/contact.html
+++ b/mainapp/templates/mainapp/contact.html
@@ -12,7 +12,7 @@
 
 {% block content %}
     <div class="location">
-        {% for address in contact %}
+        {% for address in contacts %}
             <div class="location-1">
                 <i class="fa fa-map-marker fa-5x"></i>
                 <h4>{{ address.city }}</h4>
