--- a/mainapp/templates/mainapp/includes/inc_main_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_main_menu.html
@@ -18,4 +18,6 @@
 
 </ul>
 <a href="#" class="search"></a>
-<a href="#" class="basket"></a>
+<a href="{% url 'basket:list' %}" class="basket">
+    <span style="display: block; margin-left: 30px; color: black">{{ basket }}</span>
+</a>
