--- a/mainapp/templates/mainapp/includes/inc_products_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_products_menu.html
@@ -1,12 +1,17 @@
 <ul class="links-menu">
-        <li><a href="{% url 'products:products_list' 0 %}">
-                все
-            </a>
-        </li>
+    <li><a href="{% url 'products:products_list' 0 %}"
+               {% if request.resolver_match.kwargs.pk == 0 %}
+                   class="active"
+               {% endif %}>
+
+            все
+        </a>
+    </li>
     {% for link_menu in links_menu %}
         <li><a href="{% url 'products:products_list' link_menu.pk %}"
-               {% if request.resolver_match.kwargs.pk == link_menu.pk %} class="active"
-                                                                          {% endif %}>
+               {% if request.resolver_match.kwargs.pk == link_menu.pk %}
+                   class="active"
+               {% endif %}>
                 {{ link_menu.name }}
             </a>
         </li>
