--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -4,6 +4,10 @@
     <form class="form-horizontal" method="post" action="{% url 'authapp:login' %}">
 
         {% csrf_token %}
+        {% if next %}
+
+        <input type="hidden" value="{{ next }}" name="next">
+        {% endif %}
         {{ form.as_p }}
         <button class="btn btn-primary" type="submit">Войти</button>
     </form>
