--- a/basketapp/templates/basketapp/base.html
+++ b/basketapp/templates/basketapp/base.html
@@ -26,7 +26,7 @@
                 {% if user.first_name %}
                     {{ user.first_name }}
                 {% else %}
-                    {{ user }}
+                    Пользователь
                 {% endif %}
             </div>
 
