--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -5,12 +5,13 @@
         <meta charset="utf-8">
         <title>
             {% block title %}
-            {{ title|default:"мой магазин"|capfirst }}
+                {{ title|default:"мой магазин"|capfirst }}
             {% endblock %}
         </title>
         {% block css %}
-        <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-        <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">
+            <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+            <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+            <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">
         {% endblock %}
 
         {% block js %}
@@ -29,32 +30,32 @@
 
         </div>
         {% block footer %}
-        <div class="footer">
-            <div class="clearfix">
-                <div class="text-footer">
-                    <h3>контакты</h3>
+            <div class="footer">
+                <div class="clearfix">
+                    <div class="text-footer">
+                        <h3>контакты</h3>
+                    </div>
+                    <div class="text-footer">
+                        <h3>полезная информация</h3>
+                    </div>
+                    <div class="text-footer clearfix">
+                        <h3>Оставайтесь на связи</h3>
+                        <p>Подписаться на новости и рассылки</p>
+                        <form>
+                            <input type="email" name="email" placeholder="ваш email">
+                            <a href="#"><i class="fa fa-paper-plane fa-2x" aria-hidden="true"></i></a>
+                        </form>
+                    </div>
                 </div>
-                <div class="text-footer">
-                    <h3>полезная информация</h3>
+                <p class="small">&copy; GB {% now "Y" %}</p>
+                <div class="social">
+                    <a href="#" class="social1"></a>
+                    <a href="#" class="social2"></a>
+                    <a href="#" class="social3"></a>
+                    <a href="#" class="social4"></a>
                 </div>
-                <div class="text-footer clearfix">
-                    <h3>Оставайтесь на связи</h3>
-                    <p>Подписаться на новости и рассылки</p>
-                    <form>
-                        <input type="email" name="email" placeholder="ваш email">
-                        <a href="#"><i class="fa fa-paper-plane fa-2x" aria-hidden="true"></i></a>
-                    </form>
-                </div>
+                <p class="small">Положения &amp; Условия  /  Конфиденциальность &amp; Cookies</p>
             </div>
-            <p class="small">&copy; GB {% now "Y" %}</p>
-            <div class="social">
-                <a href="#" class="social1"></a>
-                <a href="#" class="social2"></a>
-                <a href="#" class="social3"></a>
-                <a href="#" class="social4"></a>
-            </div>
-            <p class="small">Положения &amp; Условия  /  Конфиденциальность &amp; Cookies</p>
-        </div>
         {% endblock %}
 
     </body>
