--- a/adminapp/templates/adminapp/user_delete_confirm.html
+++ b/adminapp/templates/adminapp/user_delete_confirm.html
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-6">
-            Уверены, что хотите удалить пользвоателя {{ object.get_full_name }} ({{ object.username }})
+            Уверены, что хотите удалить пользователя {{ object.get_full_name }} ({{ object.username }})
             <form method="post">
                 {% csrf_token %}
 
