--- a/adminapp/templates/adminapp/user_list.html
+++ b/adminapp/templates/adminapp/user_list.html
@@ -1,53 +1,70 @@
 {% extends 'adminapp/base.html' %}
-{% load static %}
+{% load static my_tags %}
 {% block content %}
-<div class="users_list">
-    <button class="new_user">
-        <a href={% url 'adminapp:user_create' %}>
-            новый пользователь
-        </a>
-    </button>
-    {% for object in objects %}
-    <div class="user_record {% if not object.is_active %}not_active{% endif %}">
-        <img
-            src="{% if object.avatar %}/media/{{ object.avatar }}{% else %}{% static 'img/default.jpg' %}{% endif %}"
-            alt="{{ object.username }}">
-        <div class="user_role">
-            {% if object.is_superuser %}
-            администратор
-            {% else %}
-            пользователь
+    <div class="users_list">
+        <button class="new_user">
+            <a href={% url 'adminapp:user_create' %}>
+                новый пользователь
+            </a>
+        </button>
+        {% for object in object_list %}
+            <div class="user_record {% if not object.is_active %}not_active{% endif %}">
+                <img
+                src="{{ object.avatar|media_for_users }}"
+                alt="{{ object.username }}">
+                <div class="user_role">
+                    {% if object.is_superuser %}
+                        администратор
+                    {% else %}
+                        пользователь
+                    {% endif %}
+                    <button>
+                        <a href={% url 'adminapp:user_update' object.pk %}>
+                            редактировать
+                        </a>
+                    </button>
+                    <button>
+                        <a href={% url 'adminapp:user_delete' object.pk %}>
+                            удалить
+                        </a>
+                    </button>
+                </div>
+                <div class="user_name">
+                    <p><strong>{{ object.username }}</strong></p>
+                    <p>
+                    {{ object.get_full_name }}
+                    </p>
+                </div>
+                <div class="user_age">
+                    age:<br>
+                    {{ object.age }} лет
+                </div>
+                <div class="user_email">
+                    email:<br>
+                    {{ object.email }}
+                </div>
+                <div class="user_lastlogin">
+                    logged:<br>
+                    {{ object.last_login }}
+                </div>
+            </div>
+        {% endfor%}
+        <div class="pagination">
+            {% if page_obj.has_previous %}
+                <a href="?page={{ page_obj.previous_page_number }}"><< Prev</a>
             {% endif %}
-            <button>
-                <a href={% url 'adminapp:user_update' object.pk %}>
-                    редактировать
-                </a>
-            </button>
-            <button>
-                <a href={% url 'adminapp:user_delete' object.pk %}>
-                    удалить
-                </a>
-            </button>
-        </div>
-        <div class="user_name">
-            <p><strong>{{ object.username }}</strong></p>
-            <p>
-            {{ object.get_full_name }}
-            </p>
-        </div>
-        <div class="user_age">
-            age:<br>
-            {{ object.age }} лет
-        </div>
-        <div class="user_email">
-            email:<br>
-            {{ object.email }}
-        </div>
-        <div class="user_lastlogin">
-            logged:<br>
-            {{ object.last_login }}
+
+            {% for item in page_obj.paginator.page_range %}
+                {% if item == page_obj.number %}
+                    <span>{{ item }}</span>
+                {% else %}
+                    <a href="?page= {{ item }}">{{ item }}</a>
+                {% endif %}
+
+            {% endfor %}
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">Next >></a>
+            {% endif %}
         </div>
     </div>
-    {% endfor%}
-</div>
 {% endblock %}
