--- a/mainapp/templates/mainapp/products_list.html
+++ b/mainapp/templates/mainapp/products_list.html
@@ -21,6 +21,29 @@
                     Категория: {{ category.name|title }}
                 </h2>
             </div>
+            <div class="pagination">
+                {% if products.has_previous %}
+                    <a href="?page={{ products.previous_page_number }}"><< Prev</a>
+                {% endif %}
+                
+<!--                <span class="current">
+                    Cтраница {{ products.number }} из {{ products.paginator.num_pages }}
+                </span>
+-->
+
+                {% for item in products.paginator.page_range %}
+                    {% if item == products.number %}
+                        <span>{{ item }}</span>
+                    {% else %}
+                        <a href="?page= {{ item }}">{{ item }}</a>
+                    {% endif %}
+
+                {% endfor %}
+                {% if products.has_next %}
+                    <a href="?page={{ products.next_page_number }}">Next >></a>
+                {% endif %}
+            </div>
+
             <div class="products clearfix">
                 {% for product in products %}
                     <div class="block">
