--- a/adminapp/templates/adminapp/product_info.html
+++ b/adminapp/templates/adminapp/product_info.html
@@ -1,11 +1,13 @@
 {% extends 'adminapp/base.html' %}
 {% load static %}
+{% load my_tags %}
+
 {% block content %}
 <div class="product_read">
     <div class="product_name">
         Продукт<strong>{{ object.category.name|title }} / {{ object.name|title }}</strong>
     </div>
-    <img src="/media/{{ object.image }}" alt="{{ object.name }}">
+    <img src="{{ object.image|media_for_products }}" alt="{{ object.name }}">
     <div class="summary">
         <b>цена</b>
         <p>{{ object.price }} руб</p>
