--- a/authapp/templates/authapp/edit.html
+++ b/authapp/templates/authapp/edit.html
@@ -5,6 +5,7 @@
 
         {% csrf_token %}
         {{ form.as_p }}
+        {{ profile_form.as_p }}
         <button class="btn btn-primary" type="submit">Сохранить</button>
     </form>
         <a class="btn btn-link" href="{% url 'main' %}" style="width: 100%">На гавную</a>
