--- a/authapp/templates/authapp/register.html
+++ b/authapp/templates/authapp/register.html
@@ -7,8 +7,8 @@
         {{ form.as_p }}
         <button class="btn btn-primary" type="submit">Зарегистрироваться</button>
     </form>
-    <a class="btn btn-info" href="{% url 'authapp:login' %}" style="width: 100%">Войти</a>
-
+    <a class="btn btn-info" href="{% url 'authapp:login' %}" style="width: 100%">войти</a>
+    <a class="btn btn-info" href="{% url 'social:begin' 'vk-oauth2' %}?next=/" style="width: 100%">войте через ВКонтакте</a>
 {% endblock %}
 
 
