--- a/ordersapp/templates/ordersapp/order_form.html
+++ b/ordersapp/templates/ordersapp/order_form.html
@@ -1,6 +1,12 @@
 {% extends 'ordersapp/base.html' %}
 {% load static %}
 
+{% block js %}
+    <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+    <script src="{% static 'ordersapp/js/jquery.formset.js' %}"></script>
+    <script src="{% static 'ordersapp/js/script.js' %}"></script>
+{% endblock %}
+
 {% block content %}
     {% include 'ordersapp/includes/inc_order_summary.html' %}
     <div class="order_form">
@@ -30,7 +36,16 @@
                                     {% endfor %}
                                 {% endif %}
                                 {{ field.errors.as_ul }}
-                                {{ field }}
+                                {% if field.name != 'price' %}
+                                    {{ field }}
+                                {% else %}
+                                    {% if field.value %}
+                                        <span class="orderitems-{{ forloop.parentloop.counter0 }}-price">
+                                            {{ field.value }}
+                                        </span> руб
+
+                                    {% endif %}
+                                {% endif %}
                             </td>
                         {% endfor %}
                     </tr>
