--- a/ordersapp/templates/ordersapp/order_list.html
+++ b/ordersapp/templates/ordersapp/order_list.html
@@ -3,7 +3,7 @@
 
 {% block js %}
     <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
-    <script src="{% static 'ordersapp/js/scripts.js' %}"></script>
+    <script src="{% static 'ordersapp/js/script.js' %}"></script>
 {% endblock %}
 
 {% block content %}
